@@ -1,4 +1,9 @@
+
+
+
+
 package controller;
+
 import util.Constants;
 import model.Port;
 import model.Wire;
@@ -9,29 +14,36 @@ import java.util.List;
 public class WireManager {
     private final List<Wire> wires;
     private double totalWireLengthUsed;
-    //private final List<WireView> wires = new ArrayList<>();
 
     public WireManager() {
         this.wires = new ArrayList<>();
         this.totalWireLengthUsed = 0;
-
     }
 
-    public boolean tryConnectPorts(Port toPort, Port fromPort) {
-        if (toPort.getType() != Port.PortType.OUTPUT || fromPort.getType() != Port.PortType.INPUT)
-            return false;
-        if (toPort.getParentNode() == fromPort.getParentNode())
-            return false;
-        if (fromPort.getConnectedWire() != null || toPort.getConnectedWire() != null)
-            return false;
-        if (!fromPort.isCompatibleWith(toPort.getCompatibleShape()))
+
+    public boolean tryConnectPorts(Port fromPort, Port toPort) {
+        if (fromPort == null || toPort == null) return false;
+
+        // جهت درست
+        if (fromPort.getType() != Port.PortType.OUTPUT || toPort.getType() != Port.PortType.INPUT)
             return false;
 
+        // نود مبدأ و مقصد یکی نباشندباید حواست باش بعدا درست کنی
+        if (fromPort.getParentNode() == toPort.getParentNode())
+            return false;
 
+        // هر دو آزاد باشند (سیمِ یکتا)
+        if (fromPort.getConnectedWire() != null || toPort.getConnectedWire() != null) {
+            System.out.println(" یکی از پورت‌ها قبلاً متصل شده");
+            return false;
+        }
+
+        // محدودیت طول
         double wireLength = fromPort.getPosition().distanceTo(toPort.getPosition());
-        if (totalWireLengthUsed + wireLength > Constants.TOTAL_AVAILABLE_WIRE_LENGTH)
+        if (totalWireLengthUsed + wireLength > Constants.TOTAL_AVAILABLE_WIRE_LENGTH) {
+            System.out.println(" طول سیم مجاز تمام شده!");
             return false;
-        System.out.println(" طول سیم مجاز تمام شده!");
+        }
 
 
         Wire newWire = new Wire(fromPort, toPort);
@@ -39,32 +51,47 @@ public class WireManager {
         toPort.setConnectedWire(newWire);
         wires.add(newWire);
         totalWireLengthUsed += wireLength;
+
+        System.out.println("FromPort ID: " + fromPort.getId() + " → ToPort ID: " + toPort.getId());
         return true;
     }
+
+
     public Wire connectAndReturn(Port fromPort, Port toPort) {
         boolean success = tryConnectPorts(fromPort, toPort);
+        System.out.println("connectAndReturn called. Wires size = " + wires.size());
+        System.out.println("Total wire length now = " + getTotalWireLengthUsed());
         if (!success) return null;
-
-        return wires.getLast(); // آخرین سیم موفق ثبت‌شده
+        return wires.get(wires.size() - 1);
     }
+
     public void removeWire(Wire wire) {
-        wires.remove(wire);
-        totalWireLengthUsed -= wire.getLength();
-        wire.getFromPort().setConnectedWire(null);
-        wire.getToPort().setConnectedWire(null);
+        if (wire == null) return;
+        if (wires.remove(wire)) {
+            totalWireLengthUsed -= wire.getLength();
+            if (wire.getFromPort() != null){
+                wire.getFromPort().setConnectedWire(null);
+                wire.getFromPort().setOccupied(false);
+            }
+            if (wire.getToPort()   != null){
+                wire.getToPort().setConnectedWire(null);
+                wire.getToPort().setOccupied(false);
+            }
+            System.out.println("Total wire length now = " + getTotalWireLengthUsed());
+        }
     }
 
-    public List<Wire> getWires() {
-        return wires;
-    }
+    public List<Wire> getWires() { return wires; }
 
     public double getRemainingWireLength() {
         return Constants.TOTAL_AVAILABLE_WIRE_LENGTH - totalWireLengthUsed;
     }
 
+    public List<Wire> getAll() { return wires; }
 
-    public List<Wire> getAll() {
-        return wires;
+    public double getTotalWireLengthUsed() {
+        double sum = 0;
+        for (Wire w : wires) sum += w.getLength();
+        return sum;
     }
 }
-
